feat: Added support for 1.18.2.