@@ -5,14 +5,10 @@ import com.gitsh01.libertyvillagers.LibertyVillagersMod;
 import com.gitsh01.libertyvillagers.LibertyVillagersServerInitializer;
 import com.mojang.brigadier.context.CommandContext;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import net.fabricmc.api.ClientModInitializer;
-import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
+import net.fabricmc.fabric.api.command.v1.CommandRegistrationCallback;
 import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.gui.screen.ingame.BookScreen;
 import net.minecraft.entity.ai.brain.MemoryModuleType;
 import net.minecraft.entity.passive.CatEntity;
-import net.minecraft.entity.passive.CatVariant;
 import net.minecraft.entity.passive.IronGolemEntity;
 import net.minecraft.entity.passive.VillagerEntity;
 import net.minecraft.item.ItemStack;
@@ -23,22 +19,18 @@ import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.server.world.ServerWorld;
 import net.minecraft.text.Text;
+import net.minecraft.text.TranslatableText;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.Registry;
-import net.minecraft.util.registry.RegistryEntry;
 import net.minecraft.util.registry.RegistryKey;
 import net.minecraft.village.VillagerProfession;
 import net.minecraft.world.poi.PointOfInterest;
 import net.minecraft.world.poi.PointOfInterestStorage;
-import net.minecraft.world.poi.PointOfInterestTypes;
+import net.minecraft.world.poi.PointOfInterestType;
 import org.apache.commons.lang3.tuple.MutablePair;
-import org.apache.logging.log4j.core.jmx.Server;
 
-import java.awt.*;
 import java.util.*;
-import java.util.List;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static com.gitsh01.libertyvillagers.LibertyVillagersMod.CONFIG;
 import static net.minecraft.server.command.CommandManager.literal;
@@ -62,13 +54,13 @@ public class VillagerStats {
     private static final int LINES_PER_PAGE = 14;
 
     public static void register() {
-        CommandRegistrationCallback.EVENT.register((dispatcher, registryAccess, environment) -> dispatcher.register(
+        CommandRegistrationCallback.EVENT.register((dispatcher, dedicated) -> dispatcher.register(
                 literal("villagerstats").executes(context -> {
                     processVillagerStats(context);
                     return 1;
                 })));
         CommandRegistrationCallback.EVENT.register(
-                (dispatcher, registryAccess, environment) -> dispatcher.register(literal("vs").executes(context -> {
+                (dispatcher, dedicated) -> dispatcher.register(literal("vs").executes(context -> {
                     processVillagerStats(context);
                     return 1;
                 })));
@@ -88,7 +80,7 @@ public class VillagerStats {
 
         ItemStack bookStack = new ItemStack(Items.WRITTEN_BOOK);
         bookStack.setSubNbt("title",
-                NbtString.of(Text.translatable("text.LibertyVillagers.villagerStats.title").getString()));
+                NbtString.of(new TranslatableText("text.LibertyVillagers.villagerStats.title").getString()));
         bookStack.setSubNbt("author", NbtString.of(player.getEntityName()));
 
         List<VillagerEntity> villagers = serverWorld.getNonSpectatingEntities(VillagerEntity.class,
@@ -108,9 +100,9 @@ public class VillagerStats {
         if (LibertyVillagersMod.isClient()) {
             LibertyVillagersClientInitializer.openBookScreen(bookStack);
         } else {
-            if (!FabricLoader.getInstance().getModContainer("server_translations_api").isPresent()) {
+            if (FabricLoader.getInstance().getModContainer("server_translations_api").isEmpty()) {
                 player.sendMessage(Text.of("Server_translations_api is missing. VillagerStats does not work " +
-                        "server-side without translations."));
+                        "server-side without translations."), false);
                 return;
             }
             LibertyVillagersServerInitializer.openBookScreen(bookStack, player);
@@ -146,10 +138,10 @@ public class VillagerStats {
 
     protected static String titlePage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                       ServerWorld serverWorld) {
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.title").getString() + "\n\n";
+        String pageString = new TranslatableText("text.LibertyVillagers.villagerStats.title").getString() + "\n\n";
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                Text.translatable("text.LibertyVillagers.villagerStats.numberOfVillagers").getString(),
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                new TranslatableText("text.LibertyVillagers.villagerStats.numberOfVillagers").getString(),
                 villagers.size()).getString() + "\n";
 
         int babies = 0;
@@ -171,33 +163,33 @@ public class VillagerStats {
             }
         }
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfNitwits").getString(), nitwits)
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfNitwits").getString(), nitwits)
                 .getString() + "\n";
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfUnemployed").getString(), unemployed)
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfUnemployed").getString(), unemployed)
                 .getString() + "\n";
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfBabies").getString(), babies)
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfBabies").getString(), babies)
                 .getString() + "\n";
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfHomeless").getString(), homeless)
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfHomeless").getString(), homeless)
                 .getString() + "\n";
 
         List<IronGolemEntity> golems = serverWorld.getNonSpectatingEntities(IronGolemEntity.class,
                 player.getBoundingBox().expand(CONFIG.debugConfig.villagerStatRange));
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfGolems").getString(), golems.size())
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfGolems").getString(), golems.size())
                 .getString() + "\n";
 
         List<CatEntity> cats = serverWorld.getNonSpectatingEntities(CatEntity.class,
                 player.getBoundingBox().expand(CONFIG.debugConfig.villagerStatRange));
 
-        pageString += Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfCats").getString(), cats.size())
+        pageString += new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfCats").getString(), cats.size())
                 .getString() + "\n";
 
 
@@ -206,7 +198,7 @@ public class VillagerStats {
 
     protected static String professionPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                            ServerWorld serverWorld) {
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.professions").getString() + "\n\n";
+        String pageString = new TranslatableText("text.LibertyVillagers.villagerStats.professions").getString() + "\n\n";
         TreeMap<String, ProfessionInfo> villagerProfessionMap = new TreeMap<>();
 
         for (Map.Entry<RegistryKey<VillagerProfession>, VillagerProfession> professionEntry : Registry.VILLAGER_PROFESSION.getEntrySet()) {
@@ -228,11 +220,9 @@ public class VillagerStats {
         }
 
         AtomicReference<String> professions = new AtomicReference<>("");
-        villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
-            professions.set(professions.get() +
-                    Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
-                            professionInfo.countVillagersWithProfession).getString() + "\n");
-        });
+        villagerProfessionMap.forEach((villagerProfession, professionInfo) -> professions.set(professions.get() +
+                new TranslatableText("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
+                        professionInfo.countVillagersWithProfession).getString() + "\n"));
 
         pageString += professions.get() + "\n\n";
 
@@ -243,7 +233,7 @@ public class VillagerStats {
     protected static String heldWorkstationPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                                 ServerWorld serverWorld) {
         String pageString =
-                Text.translatable("text.LibertyVillagers.villagerStats.professionsHeldJobSites").getString() + "\n\n";
+                new TranslatableText("text.LibertyVillagers.villagerStats.professionsHeldJobSites").getString() + "\n\n";
         TreeMap<String, ProfessionInfo> villagerProfessionMap = new TreeMap<>();
 
         for (Map.Entry<RegistryKey<VillagerProfession>, VillagerProfession> professionEntry : Registry.VILLAGER_PROFESSION.getEntrySet()) {
@@ -254,14 +244,14 @@ public class VillagerStats {
         AtomicReference<String> heldWorkstations = new AtomicReference<>("");
         villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
             long numOccupiedWorkstations = 0;
-            if (villagerProfession != "baby") {
+            if (!Objects.equals(villagerProfession, "baby")) {
                 numOccupiedWorkstations = serverWorld.getPointOfInterestStorage()
-                        .count(professionInfo.profession.heldWorkstation(), player.getBlockPos(),
+                        .count(professionInfo.profession.getWorkStation().getCompletionCondition(), player.getBlockPos(),
                                 CONFIG.debugConfig.villagerStatRange,
                                 PointOfInterestStorage.OccupationStatus.IS_OCCUPIED);
             }
             heldWorkstations.set(heldWorkstations.get() +
-                    Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
+                    new TranslatableText("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
                             numOccupiedWorkstations).getString() + "\n");
         });
 
@@ -274,7 +264,7 @@ public class VillagerStats {
     protected static String freeWorkstationsPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                                  ServerWorld serverWorld) {
         String pageString =
-                Text.translatable("text.LibertyVillagers.villagerStats.professionsAvailableJobSites").getString() +
+                new TranslatableText("text.LibertyVillagers.villagerStats.professionsAvailableJobSites").getString() +
                         "\n\n";
         TreeMap<String, ProfessionInfo> villagerProfessionMap = new TreeMap<>();
 
@@ -286,15 +276,15 @@ public class VillagerStats {
         AtomicReference<String> availableWorkstations = new AtomicReference<>("");
         villagerProfessionMap.forEach((villagerProfession, professionInfo) -> {
             long numAvailableWorkstations = 0;
-            if (villagerProfession != "baby") {
+            if (!Objects.equals(villagerProfession, "baby")) {
                 numAvailableWorkstations = serverWorld.getPointOfInterestStorage()
-                        .count(professionInfo.profession.acquirableWorkstation(), player.getBlockPos(),
+                        .count(professionInfo.profession.getWorkStation().getCompletionCondition(), player.getBlockPos(),
                                 CONFIG.debugConfig.villagerStatRange,
                                 PointOfInterestStorage.OccupationStatus.HAS_SPACE);
             }
 
             availableWorkstations.set(availableWorkstations.get() +
-                    Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
+                    new TranslatableText("text.LibertyVillagers.villagerStats.professionsCountFormat", villagerProfession,
                             numAvailableWorkstations).getString() + "\n");
         });
 
@@ -305,19 +295,19 @@ public class VillagerStats {
 
     protected static String homelessPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                          ServerWorld serverWorld) {
-        String homelessString = "";
+        StringBuilder homelessString = new StringBuilder();
         int numHomeless = 0;
         for (VillagerEntity villager : villagers) {
             if (!villager.getBrain().hasMemoryModule(MemoryModuleType.HOME)) {
                 numHomeless++;
-                homelessString +=
-                        Text.translatable("text.LibertyVillagers.villagerStats.homeless", villager.getDisplayName(),
-                                villager.getBlockPos().toShortString()).getString() + "\n";
+                homelessString.append(
+                        new TranslatableText("text.LibertyVillagers.villagerStats.homeless", villager.getDisplayName(),
+                                villager.getBlockPos().toShortString()).getString()).append("\n");
             }
         }
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfHomeless").getString(), numHomeless)
+        String pageString = new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfHomeless").getString(), numHomeless)
                 .getString() + "\n\n";
         if (numHomeless > 0) {
             pageString += homelessString;
@@ -329,75 +319,79 @@ public class VillagerStats {
     protected static String availableBedsPage(ServerPlayerEntity player, List<VillagerEntity> villagers,
                                               ServerWorld serverWorld) {
         List<PointOfInterest> availableBeds = serverWorld.getPointOfInterestStorage()
-                .getInCircle(registryEntry -> registryEntry.matchesKey(PointOfInterestTypes.HOME), player.getBlockPos(),
+                .getInCircle(poiType -> poiType == PointOfInterestType.HOME, player.getBlockPos(),
                         CONFIG.debugConfig.villagerStatRange, PointOfInterestStorage.OccupationStatus.HAS_SPACE)
-                .collect(Collectors.toList());
+                .toList();
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
-                Text.translatable("text.LibertyVillagers.villagerStats.numberOfAvailableBeds").getString(),
-                availableBeds.size()).getString() + "\n\n";
+        StringBuilder pageString = new StringBuilder(new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                new TranslatableText("text.LibertyVillagers.villagerStats.numberOfAvailableBeds").getString(),
+                availableBeds.size()).getString() + "\n\n");
 
         if (availableBeds.size() > 0) {
-            pageString += Text.translatable("text.LibertyVillagers.villagerStats.bedsAt").getString() + "\n";
+            pageString.append(new TranslatableText("text.LibertyVillagers.villagerStats.bedsAt").getString())
+                    .append("\n");
             for (PointOfInterest bed : availableBeds) {
                 if (bed != null && bed.getPos() != null) {
-                    pageString += bed.getPos().toShortString() + "\n";
+                    pageString.append(bed.getPos().toShortString()).append("\n");
                 }
             }
         }
 
-        return pageString;
+        return pageString.toString();
     }
 
     protected static String golems(ServerPlayerEntity player, ServerWorld serverWorld) {
         List<IronGolemEntity> golems = serverWorld.getNonSpectatingEntities(IronGolemEntity.class,
                 player.getBoundingBox().expand(CONFIG.debugConfig.villagerStatRange));
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfGolems").getString(), golems.size())
-                .getString() + "\n\n";
+        StringBuilder pageString = new StringBuilder(new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                new TranslatableText("text.LibertyVillagers.villagerStats.numberOfGolems").getString(),
+                golems.size()).getString() + "\n\n");
 
         if (golems.size() > 0) {
-            pageString += Text.translatable("text.LibertyVillagers.villagerStats.golemsAt").getString() + "\n";
+            pageString.append(new TranslatableText("text.LibertyVillagers.villagerStats.golemsAt").getString())
+                    .append("\n");
             for (IronGolemEntity golem : golems) {
                 if (golem != null && golem.getBlockPos() != null) {
-                    pageString += golem.getBlockPos().toShortString() + "\n";
+                    pageString.append(golem.getBlockPos().toShortString()).append("\n");
                 }
             }
         }
 
-        return pageString;
+        return pageString.toString();
     }
 
+
+    protected static String catType(Identifier identifier) {
+        return identifier.getPath().replaceAll("^(.*)/(.*)(\\..*)$", "$2");
+    }
 
     protected static String cats(ServerPlayerEntity player, ServerWorld serverWorld) {
         List<CatEntity> cats = serverWorld.getNonSpectatingEntities(CatEntity.class,
                 player.getBoundingBox().expand(CONFIG.debugConfig.villagerStatRange));
 
-        String pageString = Text.translatable("text.LibertyVillagers.villagerStats.format",
-                        Text.translatable("text.LibertyVillagers.villagerStats.numberOfCats").getString(), cats.size())
+        String pageString = new TranslatableText("text.LibertyVillagers.villagerStats.format",
+                        new TranslatableText("text.LibertyVillagers.villagerStats.numberOfCats").getString(), cats.size())
                 .getString() + "\n\n";
 
         TreeMap<String, Integer> catVariantMap = new TreeMap<>();
 
-        for (Map.Entry<RegistryKey<CatVariant>, CatVariant> catVariantEntry : Registry.CAT_VARIANT.getEntrySet()) {
-            catVariantMap.put(catVariantEntry.getKey().getValue().toShortTranslationKey(), 0);
+        for (int i = 0; i < CatEntity.TEXTURES.size(); i++) {
+            catVariantMap.put(catType(CatEntity.TEXTURES.get(i)), 0);
         }
 
         if (cats.size() > 0) {
             for (CatEntity cat : cats) {
-                String variant = Registry.CAT_VARIANT.getId(cat.getVariant()).toShortTranslationKey();
+                String variant = catType(cat.getTexture());
                 catVariantMap.merge(variant, 1, Integer::sum);
             }
 
-            pageString += Text.translatable("text.LibertyVillagers.villagerStats.catTypes").getString() + "\n";
+            pageString += new TranslatableText("text.LibertyVillagers.villagerStats.catTypes").getString() + "\n";
 
             AtomicReference<String> catVariants = new AtomicReference<>("");
-            catVariantMap.forEach((catVariant, sum) -> {
-                catVariants.set(catVariants.get() +
-                        Text.translatable("text.LibertyVillagers.villagerStats.professionsCountFormat",
-                                Text.translatable(catVariant).getString(), sum).getString() + "\n");
-            });
+            catVariantMap.forEach((catVariant, sum) -> catVariants.set(catVariants.get() +
+                    new TranslatableText("text.LibertyVillagers.villagerStats.professionsCountFormat",
+                            new TranslatableText(catVariant).getString(), sum).getString() + "\n"));
 
             pageString += catVariants;
         }
